--- a/assets/html/name.html
+++ b/assets/html/name.html
@@ -20,6 +20,7 @@
 	font-family: courier, cursive;
 	font-size: 130px;
 }
+
 .container {
     position: absolute;
 		margin: 0px;
@@ -75,6 +76,10 @@ transition-duration: 0.4s;
   text-decoration: none;
   display: inline-block;
    border: 2px solid black;
+}
+
+input, button{
+    margin:0;
 }
 
 .button:hover {
