--- a/src/index.html
+++ b/src/index.html
@@ -29,9 +29,15 @@ canvas {
 .badge {
   display: none;
 }
+
+@font-face {
+  font-family: 'Finlandica';
+  src: url('./assets/font.ttf');
+}
 </style>
   </head>
   <title>Spicywar.io</title>
+  <!-- <link rel="preload" as="font" href="assets/font.ttf" type="font/ttf" /> -->
   <body>
     
     <div id="game">        <div id="preroll"></div>  </div>
