--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@ canvas {
 </style>
   </head>
   <title>Spicywar.io</title>
-  <!-- <link rel="preload" as="font" href="assets/font.ttf" type="font/ttf" /> -->
+  <link rel="preload" as="font" href="assets/font.ttf" type="font/ttf" />
   <body>
     
     <div id="game">        <div id="preroll"></div>  </div>
